syntax = "proto3";

package com.road.yishi.proto.seventarget;

message ShareRewardInfo {
  bool hasReward = 1;
}
